fix aqua head from clipping cause of too much height

--- a/frontend/src/components/headerSection/header.css
+++ b/frontend/src/components/headerSection/header.css
@@ -39,4 +39,5 @@
 
 .headerArt {
     height: 100%;
+    max-width: 100%;
 }
